# GPI-2

./: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Doxyfile  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  config.site  configure  configure.ac  configure.ac.in  install.sh
docs/: Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  mainpage.dox
docs/batch_examples/: submit_to_pbs.sh  submit_to_sge.sh  submit_to_slurm.sh
src/: GASPI.f90  GASPI.h  GASPI_Ext.f90  GASPI_h.f90  GASPI_types.f90  GPI2.c  GPI2.h  GPI2.pc.in  GPI2_ATOMIC.c  GPI2_CM.c  GPI2_CM.h  GPI2_CONFIG.c  GPI2_CONFIG.h  GPI2_Coll.c  GPI2_Coll.h  GPI2_Env.c  GPI2_Env.h  GPI2_GPU.c  GPI2_GPU.h  GPI2_GRP.c  GPI2_GRP.h  GPI2_IB.c  GPI2_IB.h  GPI2_IB_ATOMIC.c  GPI2_IB_GRP.c  GPI2_IB_IO.c  GPI2_IB_PASSIVE.c  GPI2_IO.c  GPI2_Logger.c  GPI2_Mem.c  GPI2_Mem.h  GPI2_PASSIVE.c  GPI2_SEG.c  GPI2_SEG.h  GPI2_SN.c  GPI2_SN.h  GPI2_Sockets.h  GPI2_Stats.c  GPI2_Stats.h  GPI2_Sys.c  (+14 more)
src/devices/ib/: GPI2_IB.c  GPI2_IB.h  GPI2_IB_ATOMIC.c  GPI2_IB_CONFIG.c  GPI2_IB_GRP.c  GPI2_IB_IO.c  GPI2_IB_PASSIVE.c  GPI2_IB_SEG.c  Makefile.inc
src/devices/include/: GPI2_Dev.h
src/devices/ofi/: GPI2_OFI.c  GPI2_OFI.h  GPI2_OFI_ATOMIC.c  GPI2_OFI_GRP.c  GPI2_OFI_IO.c  GPI2_OFI_PASSIVE.c  GPI2_OFI_SEG.c
src/devices/tcp/: GPI2_TCP.c  GPI2_TCP.h  GPI2_TCP_ATOMIC.c  GPI2_TCP_GRP.c  GPI2_TCP_IO.c  GPI2_TCP_PASSIVE.c  GPI2_TCP_SEG.c  Makefile.inc  list.c  list.h  rb.c  rb.h  tcp_device.c  tcp_device.h  utils.c  utils.h
src/include/: GASPI.h  GASPI_Ext.h  GASPI_Threads.h  GASPI_types.h  PGASPI.h
tests/microbenchmarks/: Makefile  Makefile.am  Makefile.am.inc  Makefile.in  allreduce.c  barrier.c  common.c  common.h  init_time.c  init_time_nobuild.c  nb_allreduce.c  nb_barrier.c  ping_pong.c  read_bw.c  read_lat.c  read_notify_bw.c  utils.h  write_bw.c  write_lat.c  write_notify_bw.c  write_notify_lat.c
tests/tests/: Make.inc  Makefile  Makefile.am  Makefile.am.inc  Makefile.in  test_utils.c  test_utils.h
tests/tests/atomic/: Makefile  Makefile.am  atomic_fail_no_seg.c  compare_swap.c  compare_swap_nobuild.c  compare_swap_test.c  fetch_add.c  fetch_add_fail.c  fetch_add_loop.c  fetch_add_nobuild.c  fetch_add_test.c  fetch_add_unalignd.c
tests/tests/cm/: Makefile  Makefile.am  con_disconnect.c
tests/tests/collectives/: Makefile  Makefile.am  allreduce.c  allreduce_user_fun.c  allreduce_user_grp.c  allreduce_user_grp_fun.c  allreduce_user_type.c  allreduce_utils.c  allreduce_vlarge.c  barrier.c  barrier_grp.c  barrier_timeout.c  loop_barrier.c  loop_barrier_group.c  loop_barrier_group_timeout.c  mtt_barrier_allreduce_different_grps.c  mtt_barrier_different_grps.c
tests/tests/comm/: Makefile  Makefile.am  all-to-all.c  all-to-rank0.c  big_transfers.c  comm_limits.c  comm_transfer_max_config.c  comm_write_m_to_1.c  queue_full.c  read_all_nsizes.c  read_nsizes.c  read_smalls.c  read_write.c  read_zero_size.c  small_writes_notify.c  strings.c  write.c  write_all.c  write_all_mtt.c  write_all_nsizes.c  write_all_nsizes_mtt.c  write_all_nsizes_nobuild.c  write_m_to_1.c  write_right_left.c  write_simple.c  write_timeout.c  write_zero_size.c  z4k_pressure.c  z4k_pressure_mtt.c
tests/tests/config/: Makefile  Makefile.am  config_usernet.c  get_config.c  print_config.c  set_config.c  sn_port.c
tests/tests/error_vec/: Makefile  Makefile.am  barrier_recover.c  barrier_recover_ping.c  get_error_vec.c  get_error_vec_fail.c  one_dies.c
tests/tests/extensions/: Makefile  Makefile.am  ping_procs.c  q_create.c  q_create_delete_wait.c  q_create_use_queue.c  seg_avail_local.c  seg_avail_local_usermsegs.c  seg_shmem.cpp  seg_subsegments.c  seg_use_buffer.c
tests/tests/fortran/: Makefile  Makefile.am  allreduce_user.f90  fortran_allreduces.f90  fortran_print.f90  fortran_seg_ptr.f90  fortran_seg_use.f90  fortran_use.f90  my_reduce.mod
tests/tests/gpu/: Makefile  hello_gpus.c  notify_gpu.c  read_gpu.c  read_write_gpu.c  read_write_gpu_gpu.c  seg_alloc.gpu.c  seg_alloc_gpu.c  seg_alloc_gpu_all.c  seg_gpu_register.c  write_gpu.c  write_gpu_all.c  write_gpu_write.c
tests/tests/groups/: Makefile  Makefile.am  force_timeout.c  g_before_start.c  g_coll_del_coll.c  g_commit_g_all.c  g_commit_try_block.c  g_elems.c  g_force_timeout.c  g_max_groups.c  g_max_groups_config.c  g_no_own.c  g_num.c  g_size.c  g_some_from_all.c  g_with_holes.c  g_with_one_hole.c  g_with_two_holes.c
tests/tests/init/: Makefile  Makefile.am  cl.c  cmd_line_args.c  exit_failure.c  hello_world.c  hello_world_build.c  initialized.c  kill_procs.c  local_rank.c  null_ptrs.c  numa_check.c  print_to.c  proc_init.c  proc_init_timeout.c  strong_sym.c
tests/tests/lists/: Makefile  Makefile.am  list_limit.c  list_ops_zero_size.c  list_read.c  list_read_notify.c  list_read_notify_usermelems.c  list_read_usermelems.c  list_usermelems.c  list_write.c  list_write_notify.c  list_write_notify_usermelems.c  list_write_usermelems.c  read_list_check.c  write_list.c  write_list_all.c  write_list_check.c
tests/tests/mpi/: Makefile  Makefile.am  mpi_allreduce.c  mpi_barrier.c  with_mpi.c
tests/tests/notifications/: Makefile  Makefile.am  allocate_shared_memory_for_segments.c  allocate_shared_memory_for_segments.h  max_notifications_config.c  multiple_local_procs_waiting_for_a_shared_notification.cpp  not_zero_wait.c  notification_value.cpp  notify.c  notify_after_delete.c  notify_all.c  notify_last.c  notify_null.c  notify_seg_alloc.c  read_notify.c  read_notify_zero_size.c  shared_notifications_and_shared_memory_for_data.cpp  write_m_to_1.c  write_notify.c  write_notify_ordering.c  write_notify_outstanding.c  write_notify_self.c  write_notify_zero_size.c
tests/tests/passive/: Makefile  Makefile.am  passive.c  passive_limits.c  passive_limits_config.c  passive_n.c  passive_nbytes.c  passive_own.c  passive_own_block.c  passive_queue_max_config.c  passive_recvtimeout.c  passive_send_recv_notify.c  passive_timeout.c  passive_tout_test.c
tests/tests/segments/: Makefile  Makefile.am  max_mem.c  (+14 more)
tutorial/code/: Makefile.am  Makefile.in
(+91 files in other folders)
